# magnas-tareas

./: .travis.yml  CMakeLists.txt  MagnasTareas.desktop  README.md  appveyor.yml
core/: Category.cpp  Category.hpp  MagnasTareas.cpp  MagnasTareas.hpp  MagnasTareasDriver.hpp  Task.hpp
debian/: changelog  control  copyright  rules
drivers/: Local.hpp
qt/: main.cpp
qt/qml/: add.qml  main.qml  qml.qrc
sqlite3/: CMakeLists.txt
