# -- Magnas Tareas Build System -- #
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(MagnasTareas)

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

FILE(GLOB QT_SRC "${CMAKE_CURRENT_SOURCE_DIR}/qt/*.cpp")
FILE(GLOB CORE_SRC "${CMAKE_CURRENT_SOURCE_DIR}/core/*.cpp")
FILE(GLOB DRIVERS_SRC "${CMAKE_CURRENT_SOURCE_DIR}/drivers/*.cpp")

FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Qml REQUIRED)
FIND_PACKAGE(Qt5Quick REQUIRED)

qt5_add_resources(RES_SRC "${CMAKE_CURRENT_SOURCE_DIR}/qt/qml/qml.qrc")

ADD_EXECUTABLE(MagnasTareas ${QT_SRC} ${CORE_SRC} ${DRIVERS_SRC} ${RES_SRC})

qt5_use_modules(MagnasTareas Widgets Qml Quick)

ADD_SUBDIRECTORY(sqlite3)
INCLUDE_DIRECTORIES(sqlite3)
TARGET_LINK_LIBRARIES(MagnasTareas sqlite3)
IF(NOT WIN32)
	TARGET_LINK_LIBRARIES(MagnasTareas pthread dl)
ENDIF()
